JSON backup restore

--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
             </label>
           </div>
         </div>
+
+        <div class="card">
+          <p class="card-title">Data backup</p>
+          <button class="ghost-button full-width" id="exportJsonButton">Export JSON</button>
+          <button class="ghost-button full-width" id="importJsonButton">Import JSON</button>
+          <input type="file" id="jsonFileInput" accept=".json,application/json" />
+        </div>
       </section>
 
       <section class="workspace">
