Add sync metadata to calendar events
- Introduced lastModified timestamp on create/update
- Added syncStatus field for offline-first sync preparation
- Safely migrated existing IndexedDB records

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
           <div>
             <p class="workspace-title" id="workspaceTitle">Term view</p>
             <p class="workspace-subtitle" id="workspaceSubtitle"></p>
+            <p class="last-updated" id="lastUpdatedLabel">Last updated: —</p>
           </div>
           <div class="filter-control">
             <input type="search" id="filterInput" placeholder="Filter events..." />
