--- a/index.html
+++ b/index.html
@@ -164,6 +164,6 @@
     </div>
 
     <div class="toast-container" id="toastContainer" aria-live="polite"></div>
-    <script src="app.js" defer></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
